--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,5 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+generative-ai/diffusion/HairStep/assets/original-paper/**
+generative-ai/diffusion/HairStep/HairStep.code-workspace
